parser.output
Nonterminals useless in grammar

    NT_P_IDENT


Terminals unused in grammar

    TM_FUNC_DEF


Rules useless in grammar

   65 NT_P_IDENT: TM_MUL NT_P_IDENT
   66           | TM_IDENT


State 6 conflicts: 1 shift/reduce


Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_GLOBAL_ITEM_LIST

    2 NT_GLOBAL_ITEM_LIST: NT_GLOBAL_ITEM TM_SEMICOL NT_GLOBAL_ITEM_LIST
    3                    | NT_GLOBAL_ITEM

    4 NT_PTR_NUM: TM_MUL
    5           | NT_PTR_NUM TM_MUL

    6 NT_TYPE_LIST: NT_TYPE TM_COMMA NT_TYPE_LIST
    7             | NT_TYPE

    8 NT_TYPE: NT_TYPE1
    9        | NT_TYPE TM_LEFT_PAREN NT_PTR_NUM TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN

   10 NT_TYPE1: NT_TYPE1 TM_MUL
   11         | TM_INT

   12 NT_VAR_LIST: NT_TYPE1 TM_IDENT TM_COMMA NT_VAR_LIST
   13            | NT_TYPE1 TM_IDENT

   14 NT_EXPR_LIST: NT_EXPR TM_COMMA NT_EXPR_LIST
   15             | NT_EXPR

   16 NT_GLOBAL_ITEM: NT_TYPE1 TM_IDENT
   17               | NT_TYPE TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN
   18               | NT_TYPE TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN
   19               | TM_PROC_DEF TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN
   20               | TM_PROC_DEF TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN
   21               | NT_TYPE TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   22               | NT_TYPE TM_IDENT TM_LEFT_PAREN NT_VAR_LIST TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   23               | TM_PROC_DEF TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   24               | TM_PROC_DEF TM_IDENT TM_LEFT_PAREN NT_VAR_LIST TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

   25 NT_CMD: NT_TYPE1 TM_IDENT TM_SEMICOL NT_CMD
   26       | NT_TYPE TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN TM_SEMICOL NT_CMD
   27       | NT_TYPE TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN TM_SEMICOL NT_CMD
   28       | TM_PROC_DEF TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN TM_SEMICOL NT_CMD
   29       | TM_PROC_DEF TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN TM_SEMICOL NT_CMD
   30       | NT_EXPR TM_ASGNOP NT_EXPR
   31       | NT_CMD TM_SEMICOL NT_CMD
   32       | TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   33       | TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   34       | TM_FOR TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   35       | TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   36       | TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN
   37       | TM_IDENT TM_LEFT_PAREN NT_EXPR_LIST TM_RIGHT_PAREN
   38       | TM_BREAK
   39       | TM_CONTINUE
   40       | TM_RETURN

   41 NT_EXPR0: TM_NAT
   42         | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   43         | TM_IDENT
   44         | TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN
   45         | TM_IDENT TM_LEFT_PAREN NT_EXPR_LIST TM_RIGHT_PAREN

   46 NT_EXPR1: TM_NOT NT_EXPR
   47         | NT_EXPR0

   48 NT_EXPR: NT_EXPR1
   49        | TM_MINUS NT_EXPR
   50        | TM_MUL NT_EXPR
   51        | TM_ADDR_OF NT_EXPR
   52        | NT_EXPR TM_MUL NT_EXPR
   53        | NT_EXPR TM_PLUS NT_EXPR
   54        | NT_EXPR TM_MINUS NT_EXPR
   55        | NT_EXPR TM_DIV NT_EXPR
   56        | NT_EXPR TM_MOD NT_EXPR
   57        | NT_EXPR TM_LT NT_EXPR
   58        | NT_EXPR TM_GT NT_EXPR
   59        | NT_EXPR TM_LE NT_EXPR
   60        | NT_EXPR TM_GE NT_EXPR
   61        | NT_EXPR TM_EQ NT_EXPR
   62        | NT_EXPR TM_NE NT_EXPR
   63        | NT_EXPR TM_AND NT_EXPR
   64        | NT_EXPR TM_OR NT_EXPR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TM_NAT <n> (258) 41
    TM_IDENT <i> (259) 12 13 16 17 18 19 20 21 22 23 24 25 26 27 28 29 36 37 43 44 45
    TM_LEFT_BRACE <none> (260) 21 22 23 24 32 33 34 35
    TM_RIGHT_BRACE <none> (261) 21 22 23 24 32 33 34 35
    TM_LEFT_PAREN <none> (262) 9 17 18 19 20 21 22 23 24 26 27 28 29 32 33 34 35 36 37 42 44 45
    TM_RIGHT_PAREN <none> (263) 9 17 18 19 20 21 22 23 24 26 27 28 29 32 33 34 35 36 37 42 44 45
    TM_SEMICOL <none> (264) 2 25 26 27 28 29 31
    TM_COMMA <none> (265) 6 12 14
    TM_FUNC_DEF <none> (266)
    TM_PROC_DEF <none> (267) 19 20 23 24 28 29
    TM_CONTINUE <none> (268) 39
    TM_BREAK <none> (269) 38
    TM_RETURN <none> (270) 40
    TM_INT <none> (271) 11
    TM_IF <none> (272) 32
    TM_THEN <none> (273) 32
    TM_ELSE <none> (274) 32
    TM_WHILE <none> (275) 33 35
    TM_DO <none> (276) 33 35
    TM_FOR <none> (277) 34
    TM_ASGNOP <none> (278) 30
    TM_OR <none> (279) 64
    TM_AND <none> (280) 63
    TM_NOT <none> (281) 46
    TM_LT <none> (282) 57
    TM_LE <none> (283) 59
    TM_GT <none> (284) 58
    TM_GE <none> (285) 60
    TM_EQ <none> (286) 61
    TM_NE <none> (287) 62
    TM_PLUS <none> (288) 53
    TM_MINUS <none> (289) 49 54
    TM_MUL <none> (290) 4 5 10 50 52
    TM_DIV <none> (291) 55
    TM_MOD <none> (292) 56
    TM_UMINUS <none> (293)
    TM_DEREF <none> (294)
    TM_ADDR_OF <none> (295) 51


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    NT_WHOLE <gil> (42)
        on left: 1
        on right: 0
    NT_GLOBAL_ITEM_LIST <gil> (43)
        on left: 2 3
        on right: 1 2
    NT_PTR_NUM <pn> (44)
        on left: 4 5
        on right: 5 9 17 18 19 20 26 27 28 29
    NT_TYPE_LIST <tl> (45)
        on left: 6 7
        on right: 6 9 18 20 27 29
    NT_TYPE <t> (46)
        on left: 8 9
        on right: 6 7 9 17 18 21 22 26 27
    NT_TYPE1 <t> (47)
        on left: 10 11
        on right: 8 10 12 13 16 25
    NT_VAR_LIST <vl> (48)
        on left: 12 13
        on right: 12 22 24
    NT_EXPR_LIST <el> (49)
        on left: 14 15
        on right: 14 37 45
    NT_GLOBAL_ITEM <gi> (50)
        on left: 16 17 18 19 20 21 22 23 24
        on right: 2 3
    NT_CMD <c> (51)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 21 22 23 24 25 26 27 28 29 31 32 33 34 35
    NT_EXPR0 <e> (52)
        on left: 41 42 43 44 45
        on right: 47
    NT_EXPR1 <e> (53)
        on left: 46 47
        on right: 48
    NT_EXPR <e> (54)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 14 15 30 32 33 34 35 42 46 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64


State 0

    0 $accept: . NT_WHOLE $end

    TM_PROC_DEF  shift, and go to state 1
    TM_INT       shift, and go to state 2

    NT_WHOLE             go to state 3
    NT_GLOBAL_ITEM_LIST  go to state 4
    NT_TYPE              go to state 5
    NT_TYPE1             go to state 6
    NT_GLOBAL_ITEM       go to state 7


State 1

   19 NT_GLOBAL_ITEM: TM_PROC_DEF . TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN
   20               | TM_PROC_DEF . TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN
   23               | TM_PROC_DEF . TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   24               | TM_PROC_DEF . TM_IDENT TM_LEFT_PAREN NT_VAR_LIST TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_IDENT       shift, and go to state 8
    TM_LEFT_PAREN  shift, and go to state 9


State 2

   11 NT_TYPE1: TM_INT .

    $default  reduce using rule 11 (NT_TYPE1)


State 3

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 10


State 4

    1 NT_WHOLE: NT_GLOBAL_ITEM_LIST .

    $default  reduce using rule 1 (NT_WHOLE)


State 5

    9 NT_TYPE: NT_TYPE . TM_LEFT_PAREN NT_PTR_NUM TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN
   17 NT_GLOBAL_ITEM: NT_TYPE . TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN
   18               | NT_TYPE . TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN
   21               | NT_TYPE . TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   22               | NT_TYPE . TM_IDENT TM_LEFT_PAREN NT_VAR_LIST TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_IDENT       shift, and go to state 11
    TM_LEFT_PAREN  shift, and go to state 12


State 6

    8 NT_TYPE: NT_TYPE1 .
   10 NT_TYPE1: NT_TYPE1 . TM_MUL
   16 NT_GLOBAL_ITEM: NT_TYPE1 . TM_IDENT

    TM_IDENT  shift, and go to state 13
    TM_MUL    shift, and go to state 14

    TM_IDENT  [reduce using rule 8 (NT_TYPE)]
    $default  reduce using rule 8 (NT_TYPE)


State 7

    2 NT_GLOBAL_ITEM_LIST: NT_GLOBAL_ITEM . TM_SEMICOL NT_GLOBAL_ITEM_LIST
    3                    | NT_GLOBAL_ITEM .

    TM_SEMICOL  shift, and go to state 15

    $default  reduce using rule 3 (NT_GLOBAL_ITEM_LIST)


State 8

   23 NT_GLOBAL_ITEM: TM_PROC_DEF TM_IDENT . TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   24               | TM_PROC_DEF TM_IDENT . TM_LEFT_PAREN NT_VAR_LIST TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 16


State 9

   19 NT_GLOBAL_ITEM: TM_PROC_DEF TM_LEFT_PAREN . NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN
   20               | TM_PROC_DEF TM_LEFT_PAREN . NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN

    TM_MUL  shift, and go to state 17

    NT_PTR_NUM  go to state 18


State 10

    0 $accept: NT_WHOLE $end .

    $default  accept


State 11

   21 NT_GLOBAL_ITEM: NT_TYPE TM_IDENT . TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   22               | NT_TYPE TM_IDENT . TM_LEFT_PAREN NT_VAR_LIST TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 19


State 12

    9 NT_TYPE: NT_TYPE TM_LEFT_PAREN . NT_PTR_NUM TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN
   17 NT_GLOBAL_ITEM: NT_TYPE TM_LEFT_PAREN . NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN
   18               | NT_TYPE TM_LEFT_PAREN . NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN

    TM_MUL  shift, and go to state 17

    NT_PTR_NUM  go to state 20


State 13

   16 NT_GLOBAL_ITEM: NT_TYPE1 TM_IDENT .

    $default  reduce using rule 16 (NT_GLOBAL_ITEM)


State 14

   10 NT_TYPE1: NT_TYPE1 TM_MUL .

    $default  reduce using rule 10 (NT_TYPE1)


State 15

    2 NT_GLOBAL_ITEM_LIST: NT_GLOBAL_ITEM TM_SEMICOL . NT_GLOBAL_ITEM_LIST

    TM_PROC_DEF  shift, and go to state 1
    TM_INT       shift, and go to state 2

    NT_GLOBAL_ITEM_LIST  go to state 21
    NT_TYPE              go to state 5
    NT_TYPE1             go to state 6
    NT_GLOBAL_ITEM       go to state 7


State 16

   23 NT_GLOBAL_ITEM: TM_PROC_DEF TM_IDENT TM_LEFT_PAREN . TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   24               | TM_PROC_DEF TM_IDENT TM_LEFT_PAREN . NT_VAR_LIST TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_RIGHT_PAREN  shift, and go to state 22
    TM_INT          shift, and go to state 2

    NT_TYPE1     go to state 23
    NT_VAR_LIST  go to state 24


State 17

    4 NT_PTR_NUM: TM_MUL .

    $default  reduce using rule 4 (NT_PTR_NUM)


State 18

    5 NT_PTR_NUM: NT_PTR_NUM . TM_MUL
   19 NT_GLOBAL_ITEM: TM_PROC_DEF TM_LEFT_PAREN NT_PTR_NUM . TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN
   20               | TM_PROC_DEF TM_LEFT_PAREN NT_PTR_NUM . TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN

    TM_IDENT  shift, and go to state 25
    TM_MUL    shift, and go to state 26


State 19

   21 NT_GLOBAL_ITEM: NT_TYPE TM_IDENT TM_LEFT_PAREN . TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   22               | NT_TYPE TM_IDENT TM_LEFT_PAREN . NT_VAR_LIST TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_RIGHT_PAREN  shift, and go to state 27
    TM_INT          shift, and go to state 2

    NT_TYPE1     go to state 23
    NT_VAR_LIST  go to state 28


State 20

    5 NT_PTR_NUM: NT_PTR_NUM . TM_MUL
    9 NT_TYPE: NT_TYPE TM_LEFT_PAREN NT_PTR_NUM . TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN
   17 NT_GLOBAL_ITEM: NT_TYPE TM_LEFT_PAREN NT_PTR_NUM . TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN
   18               | NT_TYPE TM_LEFT_PAREN NT_PTR_NUM . TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN

    TM_IDENT        shift, and go to state 29
    TM_RIGHT_PAREN  shift, and go to state 30
    TM_MUL          shift, and go to state 26


State 21

    2 NT_GLOBAL_ITEM_LIST: NT_GLOBAL_ITEM TM_SEMICOL NT_GLOBAL_ITEM_LIST .

    $default  reduce using rule 2 (NT_GLOBAL_ITEM_LIST)


State 22

   23 NT_GLOBAL_ITEM: TM_PROC_DEF TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN . TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 31


State 23

   10 NT_TYPE1: NT_TYPE1 . TM_MUL
   12 NT_VAR_LIST: NT_TYPE1 . TM_IDENT TM_COMMA NT_VAR_LIST
   13            | NT_TYPE1 . TM_IDENT

    TM_IDENT  shift, and go to state 32
    TM_MUL    shift, and go to state 14


State 24

   24 NT_GLOBAL_ITEM: TM_PROC_DEF TM_IDENT TM_LEFT_PAREN NT_VAR_LIST . TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_RIGHT_PAREN  shift, and go to state 33


State 25

   19 NT_GLOBAL_ITEM: TM_PROC_DEF TM_LEFT_PAREN NT_PTR_NUM TM_IDENT . TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN
   20               | TM_PROC_DEF TM_LEFT_PAREN NT_PTR_NUM TM_IDENT . TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 34


State 26

    5 NT_PTR_NUM: NT_PTR_NUM TM_MUL .

    $default  reduce using rule 5 (NT_PTR_NUM)


State 27

   21 NT_GLOBAL_ITEM: NT_TYPE TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN . TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 35


State 28

   22 NT_GLOBAL_ITEM: NT_TYPE TM_IDENT TM_LEFT_PAREN NT_VAR_LIST . TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_RIGHT_PAREN  shift, and go to state 36


State 29

   17 NT_GLOBAL_ITEM: NT_TYPE TM_LEFT_PAREN NT_PTR_NUM TM_IDENT . TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN
   18               | NT_TYPE TM_LEFT_PAREN NT_PTR_NUM TM_IDENT . TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 37


State 30

    9 NT_TYPE: NT_TYPE TM_LEFT_PAREN NT_PTR_NUM TM_RIGHT_PAREN . TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 38


State 31

   23 NT_GLOBAL_ITEM: TM_PROC_DEF TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE . NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 39
    TM_IDENT       shift, and go to state 40
    TM_LEFT_PAREN  shift, and go to state 41
    TM_PROC_DEF    shift, and go to state 42
    TM_CONTINUE    shift, and go to state 43
    TM_BREAK       shift, and go to state 44
    TM_RETURN      shift, and go to state 45
    TM_INT         shift, and go to state 2
    TM_IF          shift, and go to state 46
    TM_WHILE       shift, and go to state 47
    TM_DO          shift, and go to state 48
    TM_FOR         shift, and go to state 49
    TM_NOT         shift, and go to state 50
    TM_MINUS       shift, and go to state 51
    TM_MUL         shift, and go to state 52
    TM_ADDR_OF     shift, and go to state 53

    NT_TYPE   go to state 54
    NT_TYPE1  go to state 55
    NT_CMD    go to state 56
    NT_EXPR0  go to state 57
    NT_EXPR1  go to state 58
    NT_EXPR   go to state 59


State 32

   12 NT_VAR_LIST: NT_TYPE1 TM_IDENT . TM_COMMA NT_VAR_LIST
   13            | NT_TYPE1 TM_IDENT .

    TM_COMMA  shift, and go to state 60

    $default  reduce using rule 13 (NT_VAR_LIST)


State 33

   24 NT_GLOBAL_ITEM: TM_PROC_DEF TM_IDENT TM_LEFT_PAREN NT_VAR_LIST TM_RIGHT_PAREN . TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 61


State 34

   19 NT_GLOBAL_ITEM: TM_PROC_DEF TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN . TM_LEFT_PAREN TM_RIGHT_PAREN
   20               | TM_PROC_DEF TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN . TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 62


State 35

   21 NT_GLOBAL_ITEM: NT_TYPE TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE . NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 39
    TM_IDENT       shift, and go to state 40
    TM_LEFT_PAREN  shift, and go to state 41
    TM_PROC_DEF    shift, and go to state 42
    TM_CONTINUE    shift, and go to state 43
    TM_BREAK       shift, and go to state 44
    TM_RETURN      shift, and go to state 45
    TM_INT         shift, and go to state 2
    TM_IF          shift, and go to state 46
    TM_WHILE       shift, and go to state 47
    TM_DO          shift, and go to state 48
    TM_FOR         shift, and go to state 49
    TM_NOT         shift, and go to state 50
    TM_MINUS       shift, and go to state 51
    TM_MUL         shift, and go to state 52
    TM_ADDR_OF     shift, and go to state 53

    NT_TYPE   go to state 54
    NT_TYPE1  go to state 55
    NT_CMD    go to state 63
    NT_EXPR0  go to state 57
    NT_EXPR1  go to state 58
    NT_EXPR   go to state 59


State 36

   22 NT_GLOBAL_ITEM: NT_TYPE TM_IDENT TM_LEFT_PAREN NT_VAR_LIST TM_RIGHT_PAREN . TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 64


State 37

   17 NT_GLOBAL_ITEM: NT_TYPE TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN . TM_LEFT_PAREN TM_RIGHT_PAREN
   18               | NT_TYPE TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN . TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 65


State 38

    9 NT_TYPE: NT_TYPE TM_LEFT_PAREN NT_PTR_NUM TM_RIGHT_PAREN TM_LEFT_PAREN . NT_TYPE_LIST TM_RIGHT_PAREN

    TM_INT  shift, and go to state 2

    NT_TYPE_LIST  go to state 66
    NT_TYPE       go to state 67
    NT_TYPE1      go to state 68


State 39

   41 NT_EXPR0: TM_NAT .

    $default  reduce using rule 41 (NT_EXPR0)


State 40

   36 NT_CMD: TM_IDENT . TM_LEFT_PAREN TM_RIGHT_PAREN
   37       | TM_IDENT . TM_LEFT_PAREN NT_EXPR_LIST TM_RIGHT_PAREN
   43 NT_EXPR0: TM_IDENT .
   44         | TM_IDENT . TM_LEFT_PAREN TM_RIGHT_PAREN
   45         | TM_IDENT . TM_LEFT_PAREN NT_EXPR_LIST TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 69

    $default  reduce using rule 43 (NT_EXPR0)


State 41

   42 NT_EXPR0: TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 39
    TM_IDENT       shift, and go to state 70
    TM_LEFT_PAREN  shift, and go to state 41
    TM_NOT         shift, and go to state 50
    TM_MINUS       shift, and go to state 51
    TM_MUL         shift, and go to state 52
    TM_ADDR_OF     shift, and go to state 53

    NT_EXPR0  go to state 57
    NT_EXPR1  go to state 58
    NT_EXPR   go to state 71


State 42

   28 NT_CMD: TM_PROC_DEF . TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN TM_SEMICOL NT_CMD
   29       | TM_PROC_DEF . TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN TM_SEMICOL NT_CMD

    TM_LEFT_PAREN  shift, and go to state 72


State 43

   39 NT_CMD: TM_CONTINUE .

    $default  reduce using rule 39 (NT_CMD)


State 44

   38 NT_CMD: TM_BREAK .

    $default  reduce using rule 38 (NT_CMD)


State 45

   40 NT_CMD: TM_RETURN .

    $default  reduce using rule 40 (NT_CMD)


State 46

   32 NT_CMD: TM_IF . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 73


State 47

   33 NT_CMD: TM_WHILE . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 74


State 48

   35 NT_CMD: TM_DO . TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_BRACE  shift, and go to state 75


State 49

   34 NT_CMD: TM_FOR . TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 76


State 50

   46 NT_EXPR1: TM_NOT . NT_EXPR

    TM_NAT         shift, and go to state 39
    TM_IDENT       shift, and go to state 70
    TM_LEFT_PAREN  shift, and go to state 41
    TM_NOT         shift, and go to state 50
    TM_MINUS       shift, and go to state 51
    TM_MUL         shift, and go to state 52
    TM_ADDR_OF     shift, and go to state 53

    NT_EXPR0  go to state 57
    NT_EXPR1  go to state 58
    NT_EXPR   go to state 77


State 51

   49 NT_EXPR: TM_MINUS . NT_EXPR

    TM_NAT         shift, and go to state 39
    TM_IDENT       shift, and go to state 70
    TM_LEFT_PAREN  shift, and go to state 41
    TM_NOT         shift, and go to state 50
    TM_MINUS       shift, and go to state 51
    TM_MUL         shift, and go to state 52
    TM_ADDR_OF     shift, and go to state 53

    NT_EXPR0  go to state 57
    NT_EXPR1  go to state 58
    NT_EXPR   go to state 78


State 52

   50 NT_EXPR: TM_MUL . NT_EXPR

    TM_NAT         shift, and go to state 39
    TM_IDENT       shift, and go to state 70
    TM_LEFT_PAREN  shift, and go to state 41
    TM_NOT         shift, and go to state 50
    TM_MINUS       shift, and go to state 51
    TM_MUL         shift, and go to state 52
    TM_ADDR_OF     shift, and go to state 53

    NT_EXPR0  go to state 57
    NT_EXPR1  go to state 58
    NT_EXPR   go to state 79


State 53

   51 NT_EXPR: TM_ADDR_OF . NT_EXPR

    TM_NAT         shift, and go to state 39
    TM_IDENT       shift, and go to state 70
    TM_LEFT_PAREN  shift, and go to state 41
    TM_NOT         shift, and go to state 50
    TM_MINUS       shift, and go to state 51
    TM_MUL         shift, and go to state 52
    TM_ADDR_OF     shift, and go to state 53

    NT_EXPR0  go to state 57
    NT_EXPR1  go to state 58
    NT_EXPR   go to state 80


State 54

    9 NT_TYPE: NT_TYPE . TM_LEFT_PAREN NT_PTR_NUM TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN
   26 NT_CMD: NT_TYPE . TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN TM_RIGHT_PAREN TM_SEMICOL NT_CMD
   27       | NT_TYPE . TM_LEFT_PAREN NT_PTR_NUM TM_IDENT TM_RIGHT_PAREN TM_LEFT_PAREN NT_TYPE_LIST TM_RIGHT_PAREN TM_SEMICOL NT_CMD

    TM_LEFT_PAREN  shift, and go to state 81


State 55

    8 NT_TYPE: NT_TYPE1 .
   10 NT_TYPE1: NT_TYPE1 . TM_MUL
   25 NT_CMD: NT_TYPE1 . TM_IDENT TM_SEMICOL NT_CMD

    TM_IDENT  shift, and go to state 82
    TM_MUL    shift, and go to state 14

    $default  reduce using rule 8 (NT_TYPE)


State 56

   23 NT_GLOBAL_ITEM: TM_PROC_DEF TM_IDENT TM_LEFT_PAREN TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD . TM_RIGHT_BRACE
   31 NT_CMD: NT_CMD . TM_SEMICOL NT_CMD
